[tool.poetry]
name = "release-with-poetry"
version = "v1.0"
description = "my first package built and pushed by poetry"
authors = ["Hosam Almoghraby <hosam.moghraby@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
